# labar

./: .clang-format  .editorconfig  README.md  lsan.supp  meson.build
.github/workflows/: formatting-check.yml
doc/: labar.1.scd  labar_1.scd  meson.build
pixmaps/: meson.build
protocols/: meson.build
scripts/: install-hooks.sh
scripts/git-hooks/: pre-commit
src/: cache.c  cache.h  calendar-popup.c  calendar-popup.h  config-window.c  config-window.h  config.c  config.h  exec.c  exec.h  main.c  seat.c  seat.h  volume.c  widget-common.c  widget-common.h  widget-date.c  widget-date.h  widget-net.c  widget-net.h  widget-sysinfo.c  widget-sysinfo.h  widget-volume.c  widget-volume.h
